Primitive types generation implemented

--- a/SPP2-Faker/SPP2-Faker.csproj
+++ b/SPP2-Faker/SPP2-Faker.csproj
@@ -6,4 +6,8 @@
         <RootNamespace>SPP2_Faker</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Generator\System" />
+    </ItemGroup>
+
 </Project>
