Custom generators implemented
Changed project structure

Fixed cycle dependency resolver problem

--- a/Generator.Lib/Generator.Lib.csproj
+++ b/Generator.Lib/Generator.Lib.csproj
@@ -1,13 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
-        <RootNamespace>SPP2_Faker</RootNamespace>
+        <RootNamespace>Generator</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\CustomGenerator\CustomGenerator.csproj" />
       <ProjectReference Include="..\Generator.SDK\Generator.SDK.csproj" />
     </ItemGroup>
 
